Update fixtures to reflect refactoring
#509

--- a/test/fixtures/invoices.yml
+++ b/test/fixtures/invoices.yml
@@ -1,19 +1,19 @@
 DEFAULTS: &DEFAULTS
   created_at: <%= Date.parse '2010-07-05' %>
   due_date: <%= Date.parse '2010-07-06' %>
-  invoice_type: DEB
   currency: EUR
   seller_name: John Doe
   seller_iban: 1234
   buyer_name: Jane Doe
-  vat_prc: 0.2
+  vat_rate: 0.2
+  total: 20
 
 valid:
   <<: *DEFAULTS
 
 exported:
   <<: *DEFAULTS
-  in_directo: true
+  exported: true
 
 cancelled:
   <<: *DEFAULTS
@@ -21,7 +21,7 @@ cancelled:
 
 paid:
   <<: *DEFAULTS
-  sum_cache: 1
+  total: 1
 
 outstanding:
   <<: *DEFAULTS
