--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -4,6 +4,12 @@ cash:
   currency: EUR
   registrar: bestnames
 
+zero:
+  account_type: cash
+  balance: 0
+  currency: EUR
+  registrar: goodnames
+
 not_in_use_cash:
   account_type: cash
   balance: 0
