--- a/test/fixtures/billing/prices.yml
+++ b/test/fixtures/billing/prices.yml
@@ -6,6 +6,14 @@ create_one_month:
   valid_to: 2010-07-05
   zone: test
 
+renew_one_year:
+  duration: 1 year
+  price_cents: 1000
+  operation_category: renew
+  valid_from: 2010-07-05
+  valid_to: 2010-07-05
+  zone: test
+
 renew_one_month:
   duration: 1 month
   price_cents: 100
