--- a/config/application-example.yml
+++ b/config/application-example.yml
@@ -146,8 +146,12 @@ user_session_timeout: '3600' # 1 hour
 secure_session_cookies: 'false' # true|false
 same_site_session_cookies: 'false' # false|strict|lax
 
+# Billing
+subscription_billing:
+e_invoice_provider:
 
 # Since the keys for staging are absent from the repo, we need to supply them separate for testing.
 test:
   payments_seb_bank_certificate: 'test/fixtures/files/seb_bank_cert.pem'
   payments_seb_seller_private: 'test/fixtures/files/seb_seller_key.pem'
+  subscription_billing: 'true'
