--- a/test/fixtures/invoice_items.yml
+++ b/test/fixtures/invoice_items.yml
@@ -1,13 +1,13 @@
 one:
   description: Acme services
   price: 5
-  amount: 1
+  quantity: 1
   unit: pc
   invoice: valid
 
 two:
   description: Acme services
   price: 5
-  amount: 2
+  quantity: 2
   unit: pc
   invoice: valid
