--- a/config/application-example.yml
+++ b/config/application-example.yml
@@ -148,7 +148,7 @@ secure_session_cookies: 'false' # true|false
 same_site_session_cookies: 'false' # false|strict|lax
 
 # Billing
-auto_account_top_up:
+auto_account_top_up: 'false'
 e_invoice_provider_wsdl:
 e_invoice_provider_secret_key:
 
