--- a/config/application-example.yml
+++ b/config/application-example.yml
@@ -84,10 +84,10 @@ epp_hostname: 'registry.gitlab.eu'
 repp_url: 'https://repp.gitlab.eu/repp/v1/'
 
 # Estonian Company Register
-# https://www.rik.ee/en/e-business-registry/xml-service
 company_register_username:
 company_register_password:
 company_register_cache_period_days: '2'
+company_register_test_mode: 'true' # Requests in test mode are free of charge
 
 # Mobile-ID and ID-card login
 # https://www.id.ee/?id=35760 General how-to
